# test_game

./: .gitignore  Cargo.toml
res/: texture.json
src/: main.rs
