[package]
name = "test_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderer = { path = "../renderer" }
rand = { version = "0.8.5" }
rodio = "0.17.0"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = 3   # Optimize for speed.
lto = true
panic = "abort"

# cargo +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort \
# --target x86_64-pc-windows-gnu --release
